# lab08

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  Dockerfile  README.md  main.cpp
.github/workflows/: ci.yml  docker-build.yml  release.yml
demo/: main.cpp
include/: print.hpp
sources/: print.cpp
tests/: test1.cpp
